tests/baselines/reference/early-err-flags-unicode-escape.errors.txt
early-err-flags-unicode-escape.ts(17,4): error TS1005: ';' expected.
early-err-flags-unicode-escape.ts(17,4): error TS2304: Cannot find name '\u0067'.


==== early-err-flags-unicode-escape.ts (2 errors) ====
    // Copyright (C) 2016 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    /*---
    esid: sec-literals-regular-expression-literals-static-semantics-early-errors
    info: |
      RegularExpressionFlags ::
        RegularExpressionFlags IdentifierPart
    
    description: >
      It is a Syntax Error if IdentifierPart contains a Unicode escape sequence.
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /./\u0067;
       ~~~~~~
!!! error TS1005: ';' expected.
       ~~~~~~
!!! error TS2304: Cannot find name '\u0067'.
    